--- a/new.html
+++ b/new.html
@@ -1,37 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>color</title>
+	<title>SET</title>
 </head>
 <body>
 	<script type="text/javascript">
-		var n1=parseInt(prompt("Enter First No."));
-		var n2=parseInt(prompt("Enter Second No."));
-		var n3=parseInt(prompt("Enter Third No."));
-		document.write("<h1>"+"First No.+n1</h1>")
-		if (n1 > n2){
-			if (n1 > n3){
-				document.write("<h1>"+n1+" is Greater</h1>");
-		 	}
-	
-		    else
-		    {
-				document.write("<h1>"+n3+" is Greater</h1>");
-			}
+		var num1=parseInt(promot("Enter first number"));
+		var num2=parseInt(promot("Enter second number"));
+		var num3=num1/0;
+		var num4=num2/0;
 
-		}
-		else
-		{
-			if (n2 > n3){
-				document.write("<h1>"+n2+" is Greater</h1>");
-			}
-
-			else
-			{
-				document.write("<h1>"+n3+" is Greater</h1>");
-			}
-		}
-
+		alert("The expected outcome is:"+num3);
+		alert("The expected outcome is:"+num4);
 
 	</script>
 
